add fmt_value for messages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ rust-version = "1.75.0"
 
 
 [workspace.dependencies]
+formatx = { version = "0.2.2" }
 
 # async
 async-trait = { version = "0.1.77" }
