--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,6 @@
   // "rust-analyzer.cargo.features": ["single-thread", "leptos"],
   "rust-analyzer.cargo.features": [],
 
-  // "rust-analyzer.cargo.target": "wasm32-unknown-unknown"
-  "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu"
+  "rust-analyzer.cargo.target": "wasm32-unknown-unknown"
+  // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu"
 }
