--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,14 +41,14 @@ formatx = { version = "0.2.2" }
 # async
 async-trait = { version = "0.1.77" }
 futures = { version = "0.3.30" }
-tokio = { version = "1.35.1", features = ["macros", "sync", "rt", "time"] }
+tokio = { version = "^1.36.0", features = ["macros", "sync", "rt", "time"] }
 tokio-util = { version = "0.7.10" }
 
 # CLI
-clap = { version = "4.4", features = ["derive"] }
+clap = { version = "^4.4.18", features = ["derive"] }
 
 # datatypes
-chrono = { version = "0.4.31", features = ["serde"] }
+chrono = { version = "0.4.33", features = ["serde"] }
 http = { version = "1.0.0" }
 url = { version = "2.5.0" }
 uuid = { version = "1.7.0", features = ["serde", "v4"] }
@@ -83,8 +83,8 @@ axum-test = { version = "14.2.2" }
 tower-http = { version = "0.5.1", features = ["cors", "trace"] }
 
 # Leptos
-leptos = { version = "0.6.4", features = ["csr"] }
-leptos_router = { version = "0.6.4", features = ["csr"] }
+leptos = { version = "0.6.5", features = ["csr"] }
+leptos_router = { version = "0.6.5", features = ["csr"] }
 
 # logging
 tracing = { version = "0.1.40", features = ["log"] }
@@ -106,7 +106,7 @@ tokio-modbus = { version = "0.11.0", default-features = false, features = [
 # serialization / deserialization
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = { version = "1.0.113" }
-toml = { version = "0.8.8" }
+toml = { version = "0.8.9" }
 
 # WASM
 gloo = { version = "0.11.0", features = ["net", "futures", "timers", "utils"] }
