--- a/rsiot-esp/Cargo.toml
+++ b/rsiot-esp/Cargo.toml
@@ -16,16 +16,22 @@ opt-level = "z"
 
 
 [dependencies]
-tokio = { version = "1.35.1" }
-esp-idf-svc = { version = "0.47.3", features = ["std"] }
-embedded-svc = { version = "0.26.4" }
+async-trait = { version = "0.1.77" }
+tokio = { version = "1.36.0" }
+esp-idf-svc = { version = "0.48.0", features = ["std"] }
+embedded-svc = { version = "0.27.0" }
 tracing = { version = "0.1.40" }
-postcard = { version = "1", features = ["use-std"] }
-serde = { version = "1.0.194" }
-thiserror = { version = "1.0.56" }
+postcard = { version = "1.0.8", features = ["use-std"] }
+serde = { version = "1.0.196" }
+thiserror = { version = "1.0.46" }
 
-rsiot-component-core = { version = "0.0.38" }
-rsiot-messages-core = { version = "0.0.38" }
+rsiot-component-core = { version = "0.0.45" }
+rsiot-messages-core = { version = "0.0.45" }
+
 
 [build-dependencies]
 embuild = "0.31.3"
+
+
+[features]
+single-thread = ["rsiot-component-core/single-thread"]
