--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ clap = { version = "^4.4.18", features = ["derive"] }
 # datatypes
 chrono = { version = "0.4.33", features = ["serde"] }
 http = { version = "1.0.0" }
+rgb = { version = "0.8.37", features = ["serde"] }
 url = { version = "2.5.0" }
 uuid = { version = "1.7.0", features = ["serde", "v4"] }
 
