--- a/rsiot-messages-core/Cargo.toml
+++ b/rsiot-messages-core/Cargo.toml
@@ -12,6 +12,7 @@ rust-version.workspace = true
 [dependencies]
 chrono = { workspace = true }
 formatx = { workspace = true }
+rgb = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
