--- a/rsiot-leptos/Cargo.toml
+++ b/rsiot-leptos/Cargo.toml
@@ -19,13 +19,15 @@ tokio = { workspace = true }
 tracing = { workspace = true }
 
 rsiot-component-core = { workspace = true }
+rsiot-macros = { workspace = true }
 rsiot-messages-core = { workspace = true }
 rsiot-extra-components = { workspace = true }
+
 
 [dev-dependencies]
 anyhow = { workspace = true }
 serde = { workspace = true }
-tokio = { workspace = true, features = ["rt-multi-thread"] }
+tokio = { workspace = true }
 tracing-subscriber = { workspace = true }
 
 
