--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,9 @@ clap = { version = "^4.4.18", features = ["derive"] }
 # datatypes
 chrono = { version = "0.4.33", features = ["serde"] }
 http = { version = "1.0.0" }
+# TODO - заменить на palette?
 rgb = { version = "0.8.37", features = ["serde"] }
+palette = { version = "0.7.4", features = ["named"] }
 url = { version = "2.5.0" }
 uuid = { version = "1.7.0", features = ["serde", "v4"] }
 
@@ -83,9 +85,6 @@ axum = { version = "0.7.4" }
 axum-test = { version = "14.2.2" }
 tower-http = { version = "0.5.1", features = ["cors", "trace"] }
 
-# Leptos
-leptos = { version = "0.6.5", features = ["csr"] }
-leptos_router = { version = "0.6.5", features = ["csr"] }
 
 # logging
 tracing = { version = "0.1.40", features = ["log"] }
@@ -111,6 +110,10 @@ toml = { version = "0.8.9" }
 
 # WASM
 gloo = { version = "0.11.0", features = ["net", "futures", "timers", "utils"] }
+instant = { version = "0.1.12", features = ["wasm-bindgen"] }
+leptos = { version = "0.6.5", features = ["csr"] }
+leptos_router = { version = "0.6.5", features = ["csr"] }
+web-sys = { version = "0.3.68", features = ["Location", "Window"] }
 
 # Websocket
 tokio-tungstenite = { version = "0.21.0" }
