--- a/rsiot-plc/Cargo.toml
+++ b/rsiot-plc/Cargo.toml
@@ -31,6 +31,7 @@ gloo = { workspace = true }
 anyhow = { workspace = true }
 rsiot-extra-components = { workspace = true }
 tracing-subscriber = { workspace = true }
+tokio = { workspace = true, features = ["rt-multi-thread"] }
 
 
 [features]
