test target cfg

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,8 @@
 
   "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
   // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
+  // "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
+  // "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
 
   "rust-analyzer.showUnlinkedFileNotification": false
-  // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu"
-  // "rust-analyzer.showUnlinkedFileNotification": false
 }
