--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,12 +61,8 @@ document-features = { version = "0.2.8" }
 
 # database
 redis = { version = "0.24.0", features = ["tokio-comp"] }
-sqlx = { version = "0.7.3", features = [
-    "chrono",
-    "macros",
-    "postgres",
-    "runtime-tokio",
-] }
+
+
 surrealdb = { version = "1.1.1" }
 
 # env vars
@@ -117,6 +113,14 @@ web-sys = { version = "0.3.68", features = ["Location", "Window"] }
 
 # Websocket
 tokio-tungstenite = { version = "0.21.0" }
+
+# [target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.workspace.dependencies]
+sqlx = { version = "0.7.3", features = [
+    "chrono",
+    "macros",
+    "postgres",
+    "runtime-tokio",
+] }
 
 
 # workspace packages
