--- a/rsiot-timescaledb-storing/Cargo.toml
+++ b/rsiot-timescaledb-storing/Cargo.toml
@@ -10,10 +10,10 @@ readme = "README.md"
 rust-version.workspace = true
 
 
-[dependencies]
+# [dependencies]
+[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
 async-trait = { workspace = true }
 chrono = { workspace = true }
-sqlx = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
@@ -22,8 +22,10 @@ rsiot-component-core = { workspace = true }
 rsiot-components-config = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
+sqlx = { workspace = true }
 
-[dev-dependencies]
+[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
+# [dev-dependencies]
 anyhow = { workspace = true }
 chrono = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
