--- a/rsiot-extra-components/Cargo.toml
+++ b/rsiot-extra-components/Cargo.toml
@@ -23,8 +23,11 @@ rsiot-messages-core = { workspace = true }
 [dev-dependencies]
 anyhow = { workspace = true }
 serde = { workspace = true }
-tokio = { workspace = true, features = ["rt-multi-thread"] }
 tracing-subscriber = { workspace = true }
+
+
+[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
+tokio = { workspace = true, features = ["rt-multi-thread"] }
 
 
 [features]
