--- a/rsiot-http-client-wasm/Cargo.toml
+++ b/rsiot-http-client-wasm/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 rust-version.workspace = true
 
 
-[dependencies]
+[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 gloo = { workspace = true }
