--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-  // "rust-analyzer.cargo.features": ["single-thread"],
-  "rust-analyzer.cargo.features": [],
+  "rust-analyzer.cargo.features": ["single-thread"],
+  // "rust-analyzer.cargo.features": [],
 
-  "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
-  // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
+  // "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
+  "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
   // "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
   // "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
 
