--- a/rsiot-modbus-client/Cargo.toml
+++ b/rsiot-modbus-client/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 rust-version.workspace = true
 
 
-[dependencies]
+[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
 async-trait = { workspace = true }
 serde = { workspace = true }
 thiserror = { workspace = true }
@@ -23,7 +23,8 @@ rsiot-component-core = { workspace = true }
 rsiot-components-config = { workspace = true }
 rsiot-messages-core = { workspace = true }
 
-[dev-dependencies]
+
+[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
 anyhow = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 tracing-subscriber = { workspace = true }
