--- a/rsiot-websocket-client-wasm/Cargo.toml
+++ b/rsiot-websocket-client-wasm/Cargo.toml
@@ -11,7 +11,7 @@ rust-version.workspace = true
 version = "0.0.52"
 
 
-[dependencies]
+[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 futures = { workspace = true }
