--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-  "rust-analyzer.cargo.features": ["single-thread"],
-  // "rust-analyzer.cargo.features": [],
+  // "rust-analyzer.cargo.features": ["single-thread"],
+  "rust-analyzer.cargo.features": [],
 
   // "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
   "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
