--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ rust-version = "1.75.0"
 
 [workspace.dependencies]
 formatx = { version = "0.2.2" }
+openssl = { version = "0.10", features = ["vendored"] }
 
 # async
 async-trait = { version = "0.1.77" }
