--- a/rsiot-leptos/Cargo.toml
+++ b/rsiot-leptos/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 rust-version.workspace = true
 
 
-[dependencies]
+[target.'cfg(target_arch = "wasm32")'.dependencies]
 async-trait = { workspace = true }
 palette = { workspace = true }
 thiserror = { workspace = true }
@@ -19,16 +19,14 @@ tracing = { workspace = true }
 url = { workspace = true }
 
 leptos = { workspace = true }
-leptos_router = { workspace = true }
 web-sys = { workspace = true }
 
 rsiot-component-core = { workspace = true }
 rsiot-macros = { workspace = true }
 rsiot-messages-core = { workspace = true }
-rsiot-extra-components = { workspace = true }
 
 
-[dev-dependencies]
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 anyhow = { workspace = true }
 serde = { workspace = true }
 tokio = { workspace = true }
@@ -36,7 +34,4 @@ tracing-subscriber = { workspace = true }
 
 
 [features]
-"single-thread" = [
-    "rsiot-component-core/single-thread",
-    "rsiot-extra-components/single-thread",
-]
+"single-thread" = ["rsiot-component-core/single-thread"]
