--- a/rsiot-messages-core/Cargo.toml
+++ b/rsiot-messages-core/Cargo.toml
@@ -14,8 +14,12 @@ chrono = { workspace = true }
 formatx = { workspace = true }
 rgb = { workspace = true }
 serde = { workspace = true }
-serde_json = { workspace = true }
+serde_json = { workspace = true, optional = true }
 thiserror = { workspace = true }
 uuid = { workspace = true }
 
 rsiot-macros = { workspace = true }
+
+
+[features]
+serde-json = ["dep:serde_json"]
