--- a/rsiot-messages-core/Cargo.toml
+++ b/rsiot-messages-core/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = { workspace = true, optional = true }
 thiserror = { workspace = true }
 uuid = { workspace = true }
 
+rsiot-macros = { workspace = true }
 
 [features]
 serde-json = ["dep:serde_json"]
