--- a/rsiot-esp/examples/esp32-c3/Cargo.toml
+++ b/rsiot-esp/examples/esp32-c3/Cargo.toml
@@ -25,7 +25,10 @@ tracing = { version = "*", features = ["log"] }
 rgb = { version = "0.8.37", features = ["serde"] }
 
 rsiot-esp = { path = "../../", features = ["single-thread"] }
-rsiot = { version = "*", features = ["components", "plc", "single-thread"] }
+rsiot = { version = "*", features = ["plc", "single-thread"] }
+
+# TODO - test
+async-trait = "*"
 
 [build-dependencies]
 embuild = "0.31.3"
