--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-  // "rust-analyzer.cargo.features": ["single-thread", "serde-json"],
-  "rust-analyzer.cargo.features": ["serde-json"],
+  "rust-analyzer.cargo.features": ["single-thread", "serde-json"],
+  // "rust-analyzer.cargo.features": ["serde-json"],
 
   // "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
   // "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
