--- a/rsiot-auth/Cargo.toml
+++ b/rsiot-auth/Cargo.toml
@@ -14,6 +14,7 @@ version = "0.0.63"
 [dependencies]
 async-trait = { workspace = true }
 serde = { workspace = true }
+thiserror = { workspace = true }
 tracing = { workspace = true }
 uuid = { workspace = true }
 
