--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
-  "rust-analyzer.cargo.features": ["single-thread", "serde-json"],
-  // "rust-analyzer.cargo.features": ["serde-json"],
+  // "rust-analyzer.cargo.features": ["single-thread", "serde-json"],
+  "rust-analyzer.cargo.features": ["serde-json"],
 
   // "rust-analyzer.cargo.target": "aarch64-unknown-linux-gnu",
   // "rust-analyzer.cargo.target": "riscv32imc-esp-espidf",
-  // "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
-  "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
+  "rust-analyzer.cargo.target": "x86_64-unknown-linux-gnu",
+  // "rust-analyzer.cargo.target": "wasm32-unknown-unknown",
 
   "rust-analyzer.showUnlinkedFileNotification": false
 }
