--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
     "./rsiot-websocket-client",
     "./rsiot-websocket-client-wasm",
     "./rsiot-websocket-server",
+    "rsiot-localstorage-wasm",
 ]
 exclude = ["./rsiot-esp"]
 resolver = "2"
@@ -110,7 +111,13 @@ serde_json = { version = "1.0.113" }
 toml = { version = "0.8.9" }
 
 # WASM
-gloo = { version = "0.11.0", features = ["net", "futures", "timers", "utils"] }
+gloo = { version = "0.11.0", features = [
+    "net",
+    "futures",
+    "storage",
+    "timers",
+    "utils",
+] }
 instant = { version = "0.1.12", features = ["wasm-bindgen"] }
 leptos = { version = "0.6.5", features = ["csr"] }
 leptos_router = { version = "0.6.5", features = ["csr"] }
