--- a/rsiot-auth/Cargo.toml
+++ b/rsiot-auth/Cargo.toml
@@ -8,7 +8,7 @@ name = "rsiot-auth"
 readme = "README.md"
 repository.workspace = true
 rust-version.workspace = true
-version = "0.0.66"
+version = "0.0.67"
 
 
 [target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
@@ -31,7 +31,7 @@ anyhow = { workspace = true }
 tracing-subscriber = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 
-rsiot-extra-components = { workspace = true }
+rsiot-extra-components = { path = "../rsiot-extra-components" }
 
 
 [features]
