add token check for auth

--- a/rsiot-leptos/Cargo.toml
+++ b/rsiot-leptos/Cargo.toml
@@ -18,6 +18,7 @@ tokio = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
 
+gloo = { workspace = true }
 leptos = { workspace = true }
 web-sys = { workspace = true }
 
