--- a/rsiot/Cargo.toml
+++ b/rsiot/Cargo.toml
@@ -33,6 +33,11 @@ gloo = { version = "0.11.0", features = [
     "utils",
 ], optional = true }
 
+# cmp_websocket_server
+tokio-util = { version = "0.7.10", optional = true }
+tokio-tungstenite = { version = "0.21.0", optional = true }
+futures = { version = "0.3.30", optional = true }
+
 document-features = { workspace = true }
 
 tokio = { workspace = true, optional = true }
@@ -56,7 +61,6 @@ rsiot-redis-client = { workspace = true, optional = true }
 rsiot-surrealdb = { workspace = true, optional = true }
 rsiot-websocket-client = { workspace = true, optional = true }
 rsiot-websocket-client-wasm = { workspace = true, optional = true }
-rsiot-websocket-server = { workspace = true, optional = true }
 rsiot-timescaledb-storing = { workspace = true, optional = true }
 
 
@@ -115,7 +119,12 @@ websocket-client = ["components", "dep:rsiot-websocket-client"]
 websocket-client-wasm = ["components", "dep:rsiot-websocket-client-wasm"]
 
 ## Компонент websocket сервера
-websocket-server = ["components", "dep:rsiot-websocket-server"]
+cmp_websocket_server = [
+    "components",
+    "dep:futures",
+    "dep:tokio-tungstenite",
+    "dep:tokio-util",
+]
 
 ## Хранение и загрузка сообщений используя Web Storage API браузера
 cmp_webstorage = ["components", "dep:gloo"]
@@ -136,7 +145,6 @@ single-thread = [
     "rsiot-timescaledb-storing?/single-thread",
     "rsiot-websocket-client?/single-thread",
     "rsiot-websocket-client-wasm?/single-thread",
-    "rsiot-websocket-server?/single-thread",
 ]
 
 
